[gd_scene load_steps=6 format=3 uid="uid://bvl523ixfs2mb"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ecnen"]
[ext_resource type="Theme" uid="uid://ch3qd5h20v3n4" path="res://fonts/theme1.tres" id="2_2vfbs"]
[ext_resource type="StyleBox" uid="uid://64lwa73a6f4o" path="res://fonts/stylebox_black.tres" id="3_2og6p"]
[ext_resource type="PackedScene" path="res://scenes/volume_slider.tscn" id="4_fimqj"]
[ext_resource type="Script" path="res://scripts/controls.gd" id="5_g07w3"]

[node name="Menu" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecnen")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Main" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Play" type="Button" parent="Margin/Main"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_2vfbs")
theme_override_font_sizes/font_size = 186
text = "PLAY
"

[node name="Settings" type="Button" parent="Margin/Main"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_2vfbs")
theme_override_font_sizes/font_size = 186
text = "SETTINGS
"

[node name="Quit" type="Button" parent="Margin/Main"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_2vfbs")
theme_override_font_sizes/font_size = 186
text = "QUIT
"

[node name="Settings" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Master Label" type="Label" parent="Margin/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MASTER VOLUME"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Margin/Settings/Master Label"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_2og6p")

[node name="Master Volume" parent="Margin/Settings" instance=ExtResource("4_fimqj")]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
value = 0.25
bus_name = "Master"

[node name="Music Label" type="Label" parent="Margin/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Margin/Settings/Music Label"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_2og6p")

[node name="Music Volume" parent="Margin/Settings" instance=ExtResource("4_fimqj")]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
value = 1.0
bus_name = "Music"

[node name="Effects Label" type="Label" parent="Margin/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "EFFECTS VOLUME
"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Margin/Settings/Effects Label"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_2og6p")

[node name="Effects Volume" parent="Margin/Settings" instance=ExtResource("4_fimqj")]
custom_minimum_size = Vector2(128, 16)
layout_mode = 2
value = 0.25
bus_name = "Effects"

[node name="Misc Container" type="HBoxContainer" parent="Margin/Settings"]
layout_mode = 2

[node name="Click Window Label" type="Label" parent="Margin/Settings/Misc Container"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Auto Activation Delay"

[node name="Click Window Slider" type="HSlider" parent="Margin/Settings/Misc Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 100.0
max_value = 2000.0
step = 100.0
value = 100.0
script = ExtResource("5_g07w3")

[node name="Fullscreen Toggle" type="CheckButton" parent="Margin/Settings/Misc Container"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 64
text = "Fullscreen"

[node name="Back Button" type="Button" parent="Margin/Settings"]
layout_mode = 2
theme = ExtResource("2_2vfbs")
theme_override_font_sizes/font_size = 161
text = "BACK
"

[connection signal="pressed" from="Margin/Main/Play" to="." method="_play_pressed"]
[connection signal="pressed" from="Margin/Main/Settings" to="." method="_settings_pressed"]
[connection signal="pressed" from="Margin/Main/Quit" to="." method="_quit_pressed"]
[connection signal="toggled" from="Margin/Settings/Misc Container/Fullscreen Toggle" to="." method="_fullscreen_toggle"]
[connection signal="pressed" from="Margin/Settings/Back Button" to="." method="_settings_back_pressed"]
